--- a/index.html
+++ b/index.html
@@ -4,32 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>ALERTA DE SEGURANÇA ⚠️</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700;900&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
     <style>
         * {
             box-sizing: border-box;
             -webkit-tap-highlight-color: transparent;
+            font-family: 'Poppins', sans-serif;
         }
 
         body {
             background-color: #ffdeeb;
-            font-family: 'Comic Sans MS', cursive;
-            text-align: center;
             margin: 0;
             padding: 0;
-            overflow: hidden; /* Evita que ela role a página para achar o botão */
+            overflow: hidden;
             height: 100vh;
             width: 100vw;
+            color: #4a4a4a;
         }
 
-        /* --- URSINHO ADAPTADO --- */
+        /* --- URSINHO --- */
         .bear {
             position: relative;
             width: 120px;
             height: 120px;
             background: #b5835a;
             border-radius: 50% 50% 45% 45%;
-            margin: 20px auto;
+            margin: 10px auto;
             box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
         .bear::before, .bear::after {
@@ -40,12 +41,9 @@
         }
         .bear::before { left: -5px; }
         .bear::after { right: -5px; }
-        .eyes {
-            position: absolute; top: 40px; width: 100%;
-            display: flex; justify-content: space-around;
-            padding: 0 20px;
-        }
-        .eye { width: 12px; height: 12px; background: #333; border-radius: 50%; }
+        .eye { position: absolute; width: 12px; height: 12px; background: #333; border-radius: 50%; top: 40px; }
+        .eye.left { left: 30px; }
+        .eye.right { right: 30px; }
         .nose {
             position: absolute; top: 60px; left: 50%;
             transform: translateX(-50%);
@@ -67,59 +65,81 @@
         #protecao-tela {
             position: fixed;
             top: 0; left: 0; width: 100%; height: 100%;
-            background: black;
-            color: lime;
+            background: #000;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             z-index: 1000;
-            padding: 20px;
+            padding: 30px;
+        }
+
+        #protecao-tela h1 {
+            color: #00ff00;
+            font-weight: 900;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 1.8rem;
         }
 
         .container { 
             display: none; 
-            padding: 15px;
+            padding: 20px;
             height: 100vh;
-            display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
         }
 
-        h1 { font-size: 1.5rem; color: #ff4d6d; margin: 10px 0; }
-        p { font-size: 1rem; padding: 0 10px; }
+        /* Estilização Premium das Letras */
+        h1.titulo-principal {
+            font-weight: 900;
+            font-size: 2.2rem;
+            margin: 10px 0;
+            background: linear-gradient(45deg, #ff4d6d, #ff85a1);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 2px 2px 0px rgba(255, 255, 255, 0.5);
+        }
+
+        p.pergunta {
+            font-size: 1.2rem;
+            font-weight: 700;
+            line-height: 1.4;
+            color: #6a0572;
+            max-width: 300px;
+            margin-bottom: 30px;
+        }
 
         .area-botoes {
             position: relative;
             width: 100%;
-            height: 300px; /* Área limitada para o botão fugir no celular */
-            margin-top: 20px;
+            height: 250px;
         }
 
         .btn-engracado {
-            padding: 15px 25px;
+            padding: 18px 30px;
             font-size: 1.1rem;
             cursor: pointer;
             border: none;
             border-radius: 50px;
-            font-weight: bold;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            font-weight: 900;
+            text-transform: uppercase;
+            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+            transition: transform 0.1s;
         }
 
         #btn-sim { 
-            background: #4caf50; 
+            background: #27ae60; 
             color: white;
             position: relative;
             z-index: 1;
         }
 
         #btn-nao { 
-            background: #f44336; 
+            background: #e74c3c; 
             color: white; 
             position: absolute;
-            transition: 0.2s;
-            white-space: nowrap;
             z-index: 2;
         }
     </style>
@@ -127,20 +147,21 @@
 <body>
 
     <div id="protecao-tela">
-        <h2 style="text-align: center;">SISTEMA INFECTADO... 👾</h2>
-        <p id="status-texto">Escaneando possível problema...</p>
-        <button onclick="iniciar()" style="padding: 15px 30px; background: lime; border: none; border-radius: 10px; font-weight: bold; font-size: 1rem;">CORRIGIR ERRO</button>
+        <h1>SISTEMA INFECTADO... 👾</h1>
+        <p style="color: #00ff00; font-weight: bold;">Escaneando possível problema...</p>
+        <button onclick="iniciar()" style="padding: 20px 40px; background: #00ff00; color: #000; border: none; border-radius: 50px; font-weight: 900; font-size: 1.2rem; cursor: pointer; margin-top: 20px;">CORRIGIR AGORA</button>
     </div>
 
-    <div class="container" id="main-content" style="display: none;">
+    <div class="container" id="main-content">
         <div class="bear">
-            <div class="eyes"><div class="eye"></div><div class="eye"></div></div>
+            <div class="eye left"></div>
+            <div class="eye right"></div>
             <div class="nose"></div>
             <div class="hand"></div>
         </div>
 
-        <h1>BOM DIA, MINHA SURTADINHA! ❤️</h1>
-        <p>Você aceita que eu sou o melhor namorado do mundo e que sempre tenho razão?</p>
+        <h1 class="titulo-principal">BOM DIA, MINHA SURTADINHA! ❤️</h1>
+        <p class="pergunta">Você aceita que eu sou o melhor namorado do mundo e que sempre tenho razão?</p>
 
         <div class="area-botoes" id="area">
             <button id="btn-sim" class="btn-engracado" onclick="aceitou()">OBVIAMENTE SIM</button>
@@ -150,8 +171,8 @@
 
     <script>
         function iniciar() {
-            const status = document.getElementById('status-texto');
-            status.innerText = "ERRO: Nível de dengo acima do permitido!";
+            const screen = document.getElementById('protecao-tela');
+            screen.innerHTML = "<h1 style='color: #ff4d6d'>ERRO CRÍTICO!</h1><p style='color: white; font-weight: bold'>Nível de dengo acima do permitido!</p>";
             
             setTimeout(() => {
                 alert("⚠️ ALERTA: O celular detectou que você acordou muito linda hoje.");
@@ -165,7 +186,6 @@
             const btnNao = document.getElementById('btn-nao');
             const area = document.getElementById('area');
             
-            // Limita a fuga dentro da área visível do celular
             const maxX = area.clientWidth - btnNao.offsetWidth;
             const maxY = area.clientHeight - btnNao.offsetHeight;
 
